[project]
name = "gh_util"
dynamic = ["version"]
description = "Minimal LLM friendly Python client for GitHub API."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["github", "api", "client", "python"]
requires-python = ">=3.10"
dependencies = [
    "devtools",
    "httpx",
    "jinja2",
    "pydantic>=2.5",
    "pydantic-settings",
    "rich",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "pre-commit>=2.21,<4.0",
    "ruff",
]

[project.urls]
Code = "https://github.com/zzstoatzz/gh"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
env = [
    "GH_UTIL_TEST_MODE=1",
]

[tool.setuptools_scm]
write_to = "src/gh_util/_version.py"

[tool.ruff]
lint.extend-select = ["I"]
target-version = "py311"
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ['I', 'F401', 'E402']
"conftest.py" = ["F401", "F403"]
'tests/fixtures/*.py' = ['F403']
